<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="application_version">Version 1</string>
    <string name="application_copyright">© 2014</string>
    <string name="application_rights">All rights reserved</string>
    <string name="app_name">TCard</string>
    <string name="activity_transaction_details">Details</string>
    <string name="action_settings">Settings</string>
    <string name="action_account_newaccount">Add new Account</string>
    <string name="activity_view_by_descr">Transactions</string>
    <string name="hello_world">Hello world!</string>
    <string name="category_view">Category</string>
    <string name="new_record">New record</string>
    <string name="dialog_title_change_category">Change category</string>
    <string name="dialog_title_change_account">Change account</string>
    <string name="dialog_title_new_record">New transaction</string>
    <string name="dialog_title_delete">Delete</string>
    <string name="dialog_title_description">Choose description</string>
    <string name="dialog_message_delete">Record will be permanent deleted?</string>
    <string name="dialog_button_delete">Delete</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_confirm_changes_message">Do you want to save changes?</string>
    <string name="dialog_confirm_changes_button_neg">Don\'t save</string>
    <string name="dialog_confirm_changes_button_pos">Save</string>
    <string name="empty_field">Empty field</string>
    <string name="view_summary">Summary</string>
    <string name="account">Accounts</string>
    <string name="change_category">Change category</string>
    <string name="currency_rates">Currency rates</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="income">Income:</string>
    <string name="expsenses">Expenses:</string>
    <string name="balance">Balance:</string>
    <string name="income_checkbox">Income</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="expenses_checkbox">Expenses</string>
    <string name="exchange_rates">Exchange rates</string>
    <string name="sign_equal">Equal sign</string>
    <string name="flag">Flag</string>
    <string name="about_title">About</string>
    <string name="preferences">Preferences</string>
    <string name="import_and_export">Import and export</string>
    <string name="launcher_icon">Launcher icon</string>
    <string name="settings">Settings</string>
    <string name="password_disabled">Password disabled</string>
    <string name="password_enabled">Password enabled</string>
    <string name="password_set_title">Set password</string>
    <string name="password_set_summary">Create/Change password</string>
    <string name="password_enable_title">Enable password</string>
    <string name="default_account_title">Default account</string>
    <string name="currency_title">Currency</string>
    <string name="prefs_account_sum">Change default account</string>
    <string name="prefs_currency_sum">Change default currencyCashFlow</string>
    <string name="transfer_data">Data transfer</string>
    <string name="email_address">Email address:</string>
    <string name="email_subject">Subject:</string>
    <string name="email_body">Comments:</string>
    <string name="email_hints_address">example@gmail.com</string>
    <string name="email_hints_subject">Subject/Title</string>
    <string name="email_hints_body">Put some comments</string>
    <string name="email_dialog_title">Send attachement</string>
    <string name="action_description">Description</string>
    <string name="activity_title_description">Descriptions</string>
    <string name="imv_content_des_edit_description">EditDescription</string>
    <string name="imv_content_des_edit_category">EditCategory</string>
    <string name="imv_content_des_edit_account">EditAccount</string>
    <string name="imv_content_des_edit_date">EditDate</string>
    <string name="imv_content_des_edit_time">EditTime</string>
    <string name="trans_details_tv_label_amount">Amount</string>
    <string name="trans_details_tv_label_descr">Description</string>
    <string name="trans_details_tv_label_account">Account</string>
    <string name="trans_details_tv_label_cat">Category</string>
    <string name="imv_content_des_nodata">No record</string>
    <string name="menuitem_currrencyX_refresh">Refresh</string>
    <string name="trans_details_tv_label_time">Time</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="category">Category</string>
    <string name="date_and_time">Time of date</string>

    <string name="drawer_actions_transaction">Transactions</string>
    <string name="drawer_actions_summary">Summary</string>
    
    <string name="new_acc_label_name">Account name:</string>
	<string name="new_acc_name_et_hint">Enter new account name</string>
	<string name="new_acc_name_dialog_title">Create new account</string>
	<string name="new_acc_name_but_create">Create</string>
	<string name="new_acc_name_but_cancel">Cancel</string>
    <string name="navigation_view_header_title">Tcard</string>

	<string name="act_mode_acc_activity_text">Display text</string>
	<string name="dialog_delete_account_title">Delete account</string>
	<string name="dialog_delete_account_message">Deleting selected account(s) 
	    										will also remove permanently all
	    										transactions associated with the account(s),
	    										Are you sure you want to delele?</string>
	<string name="dialog_edit_acc_title">Edit account settings</string>
	<string name="dialog_edit_button_save">Save changes</string>
    <string name="text_expense">Expense</string>
    <string name="text_income">Income</string>
	
    <string-array name="time_filter_list">
        <item>Today</item>
        <item>Yesterday</item>
        <item>Week</item>
        <item>Month</item>s
        <item>Custom</item>
    </string-array>

    <string-array name="summary_graphtype">
        <item>Pie graph</item>
        <item>Line graph</item>
        <item>Bar chart</item>
    </string-array>

    <string-array name="summary_graphtitles">
        <item>Amount Vs Description</item>
        <item>Amount Vs Time</item>

    </string-array>

    <string-array name="currency_list">
        <item>AED</item>
        <item>AFN</item>
        <item>ARS</item>
        <item>EUR</item>
        <item>AUD</item>
        <item>BAM</item>
        <item>EUR</item>
        <item>BGN</item>
        <item>BHD</item>
        <item>BIF</item>
        <item>BOB</item>
        <item>BRL</item>
        <item>BWP</item>
        <item>BZD</item>
        <item>CAD</item>
        <item>CHF</item>
        <item>CLP</item>
        <item>CNY</item>
        <item>COP</item>
        <item>CRC</item>
        <item>CZK</item>
        <item>EUR</item>
        <item>DKK</item>
        <item>DZD</item>
        <item>USD</item>
        <item>EGP</item>
        <item>EUR</item>
        <item>EUR</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>EUR</item>
        <item>GTQ</item>
        <item>HKD</item>
        <item>HNL</item>
        <item>HRK</item>
        <item>HUF</item>
        <item>IDR</item>
        <item>EUR</item>
        <item>ILS</item>
        <item>INR</item>
        <item>IQD</item>
        <item>IRR</item>
        <item>EUR</item>
        <item>JMD</item>
        <item>JOD</item>
        <item>JPY</item>
        <item>KES</item>
        <item>KRW</item>
        <item>KWD</item>
        <item>LBP</item>
        <item>CHF</item>
        <item>EUR</item>
        <item>EUR</item>
        <item>EUR</item>
        <item>LYD</item>
        <item>MAD</item>
        <item>EUR</item>
        <item>EUR</item>
        <item>USD</item>
        <item>MOP</item>
        <item>EUR</item>
        <item>MXN</item>
        <item>NIO</item>
        <item>EUR</item>
        <item>NOK</item>
        <item>NZD</item>
        <item>OMR</item>
        <item>PAB</item>
        <item>PEN</item>
        <item>PHP</item>
        <item>PKR</item>
        <item>PLN</item>
        <item>USD</item>
        <item>EUR</item>
        <item>PYG</item>
        <item>QAR</item>
        <item>RON</item>
        <item>RSD</item>
        <item>RUB</item>
        <item>RWF</item>
        <item>SAR</item>
        <item>SDG</item>
        <item>SEK</item>
        <item>SGD</item>
        <item>EUR</item>
        <item>EUR</item>
        <item>SVC</item>
        <item>SYP</item>
        <item>THB</item>
        <item>TND</item>
        <item>TRY</item>
        <item>TTD</item>
        <item>TWD</item>
        <item>TZS</item>
        <item>UAH</item>
        <item>UGX</item>
        <item>USD</item>
        <item>UYU</item>
        <item>VEF</item>
        <item>USD</item>
        <item>VND</item>
        <item>YER</item>
        <item>ZAR</item>
        <item>ZWL</item>
    </string-array>
    <string-array name="code_iso3166">
        <item>ae</item>
        <item>af</item>
        <item>ar</item>
        <item>at</item>
        <item>au</item>
        <item>ba</item>
        <item>be</item>
        <item>bg</item>
        <item>bh</item>
        <item>bi</item>
        <item>bo</item>
        <item>br</item>
        <item>bw</item>
        <item>bz</item>
        <item>ca</item>
        <item>ch</item>
        <item>cl</item>
        <item>cn</item>
        <item>co</item>
        <item>cr</item>
        <item>cz</item>
        <item>de</item>
        <item>dk</item>
        <item>dz</item>
        <item>ec</item>
        <item>eg</item>
        <item>es</item>
        <item>fi</item>
        <item>fr</item>
        <item>gb</item>
        <item>gr</item>
        <item>gt</item>
        <item>hk</item>
        <item>hn</item>
        <item>hr</item>
        <item>hu</item>
        <item>id</item>
        <item>ie</item>
        <item>il</item>
        <item>in</item>
        <item>iq</item>
        <item>ir</item>
        <item>it</item>
        <item>jm</item>
        <item>jo</item>
        <item>jp</item>
        <item>ke</item>
        <item>kr</item>
        <item>kw</item>
        <item>lb</item>
        <item>li</item>
        <item>lt</item>
        <item>lu</item>
        <item>lv</item>
        <item>ly</item>
        <item>ma</item>
        <item>mc</item>
        <item>me</item>
        <item>mh</item>
        <item>mo</item>
        <item>mt</item>
        <item>mx</item>
        <item>ni</item>
        <item>nl</item>
        <item>no</item>
        <item>nz</item>
        <item>om</item>
        <item>pa</item>
        <item>pe</item>
        <item>ph</item>
        <item>pk</item>
        <item>pl</item>
        <item>pr</item>
        <item>pt</item>
        <item>py</item>
        <item>qa</item>
        <item>ro</item>
        <item>rs</item>
        <item>ru</item>
        <item>rw</item>
        <item>sa</item>
        <item>sd</item>
        <item>se</item>
        <item>sg</item>
        <item>si</item>
        <item>sk</item>
        <item>sv</item>
        <item>sy</item>
        <item>th</item>
        <item>tn</item>
        <item>tr</item>
        <item>tt</item>
        <item>tw</item>
        <item>tz</item>
        <item>ua</item>
        <item>ug</item>
        <item>us</item>
        <item>uy</item>
        <item>ve</item>
        <item>vi</item>
        <item>vn</item>
        <item>ye</item>
        <item>za</item>
        <item>zw</item>
    </string-array>

</resources>