<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
   >

     <item
        android:id="@+id/actmode_acc_activity_text"
        android:actionViewClass="android.widget.TextView"
        android:showAsAction="always"
        android:title="@string/act_mode_acc_activity_text"
         android:orderInCategory="1"/>
    
    <item
        android:id="@+id/act_mode_acc_activity_delete"
        android:icon="@drawable/ic_action_discard"
        android:orderInCategory="2"
        android:title="@string/action_delete"
        android:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/act_mode_acc_activity_edit"
        android:icon="@drawable/ic_action_edit_holo_dark"
        android:orderInCategory="3"
        android:title="@string/action_edit"
        android:showAsAction="always"/>

</menu>