<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_space" >

    <TextView
        android:id="@+id/tvLabelNewAccountName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/new_acc_label_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etNewAccountName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvLabelNewAccountName"
        android:ems="10"
        android:hint="@string/new_acc_name_et_hint"
        android:inputType="text" />

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/etNewAccountName"
        android:weightSum="10"
        >
        
    <Button
        android:id="@+id/bNewAccountCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:text="@string/new_acc_name_but_cancel"
        style="?android:attr/buttonBarButtonStyle" />
		
    <Button
        android:id="@+id/bNewAccountCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:text="@string/new_acc_name_but_create" 
        style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>
    

</RelativeLayout>
