<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:id="@+id/layout1"
        android:padding="5dp">

        <EditText
            android:id="@+id/etEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:hint="@string/email_hints_address"
            android:inputType="textEmailAddress"
            android:textAppearance="?android:attr/textAppearanceSmall" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tvEmailAddressLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/email_address"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout1"
        android:layout_centerHorizontal="true"
        android:padding="5dp" >

        <EditText
            android:id="@+id/etEmailSubject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:hint="@string/email_hints_subject"
            android:inputType="textEmailAddress"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/tvEmailSubjectLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/email_subject"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout2"
        android:layout_centerHorizontal="true"
        android:padding="5dp" >

        <EditText
            android:id="@+id/etEmailBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:hint="@string/email_hints_body"
            android:inputType="textEmailAddress"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/tvEmailBodyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/email_body"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/layout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout3"
        android:orientation="horizontal"
        android:weightSum="10"
        style="?android:attr/buttonBarStyle"
        android:padding="5dp" >
        
        <Button
            android:id="@+id/bEmailCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_weight="5"
                android:text="Cancel" />

            <Button
                android:id="@+id/bEmailSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_weight="5"
                android:text="Send" />
               </LinearLayout>

</RelativeLayout>
